turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:9: error: not found: type Red
	setCouleur(couleur: Red);
                            ^Source:17: error: not found: type Yellow
	setCouleur(couleur: Yellow);
                            ^Source:25: error: not found: type Pink
	setCouleur(couleur: Pink);
                            ^